Refactorización, correción de transacción y mejora de lógica